--- a/estilos/inicio.css
+++ b/estilos/inicio.css
@@ -262,7 +262,7 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
-.pie-pagina {
+.footer {
     background-color: #320e86;
     color: #fff;
     text-align: center;
